--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,20 @@
     <title>Icon | Grommet</title>
 </head>
 <body>
-    
+
+    <div id="book-liked">
+        <img src="/assets/img/livro.png" alt="">
+    </div>
+    <p id="feedback">
+        Como foi a ajuda do tutor?
+    </p>
+    <div id="buttons-control">
+        <button id="skip">
+            Pular
+        </button>
+        <button id="Confirm">
+            Confirmar
+        </button>
+    </div>
 </body>
 </html>
