--- a/source/index.html
+++ b/source/index.html
@@ -5,22 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Icon | Grommet</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/source/style/home.css">
 </head>
 <body>
 
-    <div id="book-liked">
-        <img src="/assets/img/livro.png" alt="">
-    </div>
-    <p id="feedback">
-        Como foi a ajuda do tutor?
-    </p>
-    <div id="buttons-control">
-        <button id="skip">
-            Pular
-        </button>
-        <button id="Confirm">
-            Confirmar
-        </button>
-    </div>
+    <article id="wapred">
+        <div id="book-liked">
+            <img src="/assets/img/livro.png" alt="">
+        </div>
+        <p id="feedback">
+            Como foi a ajuda do tutor?
+        </p>
+        <div id="buttons-control">
+            <button id="skip">
+                Pular
+            </button>
+            <button id="Confirm">
+                Confirmar
+            </button>
+        </div>
+    </article>
 </body>
 </html>
