--- a/source/index.html
+++ b/source/index.html
@@ -7,26 +7,62 @@
     <title>Icon | Grommet</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&family=Work+Sans:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/source/style/home.css">
 </head>
 <body>
 
-    <article id="wapred">
+    <article id="wrapped">
         <div id="book-liked">
             <img src="/assets/img/livro.png" alt="">
         </div>
         <p id="feedback">
             Como foi a ajuda do tutor?
         </p>
-        <div id="buttons-control">
-            <button id="skip">
-                Pular
+        <div id="stars-full">
+            <button id="one">
+                <img src="/assets/img/estrela_cheia.svg" alt="">
             </button>
-            <button id="Confirm">
-                Confirmar
+            <button id="two">
+                <img src="/assets/img/estrela_cheia.svg" alt="">
             </button>
+            <button id="tree">
+                <img src="/assets/img/estrela_cheia.svg" alt="">
+            </button>
+            <button id="four">
+                <img src="/assets/img/estrela_cheia.svg" alt="">
+            </button>
+            <button id="five">
+                <img src="/assets/img/estrela_cheia.svg" alt="">
+            </button>
+
+        </div>
+        <div id="stars-empty">
+            <button id="one">
+                <img src="/assets/img/estrela_vazia.svg" alt="">
+            </button>
+            <button id="two">
+                <img src="/assets/img/estrela_vazia.svg" alt="">
+            </button>
+            <button id="tree">
+                <img src="/assets/img/estrela_vazia.svg" alt="">
+            </button>
+            <button id="four">
+                <img src="/assets/img/estrela_vazia.svg" alt="">
+            </button>
+            <button id="five">
+                <img src="/assets/img/estrela_vazia.svg" alt="">
+            </button>
+
         </div>
     </article>
+    <div id="buttons-control">
+        <button id="skip">
+            Pular
+        </button>
+        <button id="Confirm">
+            Confirmar
+        </button>
+    </div>
 </body>
 </html>
