--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&family=Work+Sans:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/source/style/home.css">
+    <link rel="stylesheet" href="/assets/style/home.css">
 </head>
 <body>
 
@@ -16,41 +16,43 @@
         <div id="book-liked">
             <img src="/assets/img/livro.png" alt="">
         </div>
-        <p id="feedback">
-            Como foi a ajuda do tutor?
-        </p>
+        <div id="wrapped-feedback">
+            <p id="feedback">
+                Como foi a ajuda do tutor?
+            </p>
+        </div>
         <div id="stars-full">
-            <button id="one">
+            <button id="one-full">
                 <img src="/assets/img/estrela_cheia.svg" alt="">
             </button>
-            <button id="two">
+            <button id="two-full">
                 <img src="/assets/img/estrela_cheia.svg" alt="">
             </button>
-            <button id="tree">
+            <button id="three-full">
                 <img src="/assets/img/estrela_cheia.svg" alt="">
             </button>
-            <button id="four">
+            <button id="four-full">
                 <img src="/assets/img/estrela_cheia.svg" alt="">
             </button>
-            <button id="five">
+            <button id="five-full">
                 <img src="/assets/img/estrela_cheia.svg" alt="">
             </button>
 
         </div>
         <div id="stars-empty">
-            <button id="one">
+            <button id="one-empty">
                 <img src="/assets/img/estrela_vazia.svg" alt="">
             </button>
-            <button id="two">
+            <button id="two-empty">
                 <img src="/assets/img/estrela_vazia.svg" alt="">
             </button>
-            <button id="tree">
+            <button id="three-empty">
                 <img src="/assets/img/estrela_vazia.svg" alt="">
             </button>
-            <button id="four">
+            <button id="four-empty">
                 <img src="/assets/img/estrela_vazia.svg" alt="">
             </button>
-            <button id="five">
+            <button id="five-empty">
                 <img src="/assets/img/estrela_vazia.svg" alt="">
             </button>
 
